# stallion-app

./: .gitignore  Dockerfile.gateway  README.md  docker-compose.yml  grpc-gateway.js  package-lock.json  package.json  run-camera-system.sh
backend/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
backend/proto/: image_service.proto
backend/src/: image_service.rs  main.rs
camera-app/: DOCKER_README.md  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  run-camera-app.sh
camera-app/proto/: camera.proto
camera-app/src/: index.html  styles.scss
camera-app/src/app/: app.html  app.scss  app.ts  camera.service.ts  grpc-client.service.ts
