[package]
name = "image-inference-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = { version = "2.0.0-rc.10", features = ["fetch-models"] }
tokio = { version = "1.0", features = ["full"] }
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.12"
prost = "0.13"
ndarray = "0.17"
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
show-image = { version = "=0.14.0", features = [ "image", "raqote" ] }
raqote = { version = "0.8", default-features = false }
tracing = "0.1"


[build-dependencies]
tonic-build = "0.12"